# robot_design_copilot

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  README_zh.md  THIRD_PARTY_LICENSES.md  conanfile.py  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: engine.yml
docs/adr/: 0001-language-boundaries.md  0002-cpp-sidecar-ipc.md  0003-design-spec-source-of-truth.md  0004-tauri-command-boundary.md  README.md
docs/architecture/: overview.md  src-tauri.md
docs/engineering/: design-calculation.md  numerical-tolerances.md  units-and-frames.md  validation-methodology.md
docs/project/: development-plan.md  roadmap.md
docs/project/gates/: G0-platform-feasibility.md  G1-calculation-proof.md  G1-design-contract.md  G2-engineering-trust.md  G2-functional-trust.md  G3-ai-safety.md  G3-recommendation-trust.md  G4-release-readiness.md  README.md
docs/project/milestones/: M0-architecture-baseline.md  M1-desktop-foundation.md  M1-minimum-calculation.md  M2-design-spec-v1.md  M2-functional-workflow.md  M3-ai-assistance.md  M3-engineering-core.md  M4-3d-preview.md  M4-candidate-and-3d.md  M5-component-recommendation.md  M5-desktop-packaging.md  M6-ai-copilot.md  M7-export.md  M8-beta-release.md  README.md
engine/: CMakeLists.txt
engine/include/robot_engine/: dependencies.hpp
engine/include/robot_engine/design/: calculation.hpp
engine/include/robot_engine/kinematics/: reference_arm.hpp
engine/include/robot_engine/protocol/: frame.hpp  handler.hpp  session.hpp
engine/src/: dependencies.cpp
engine/src/cli/: design_calculation.cpp  main.cpp  transport_echo.cpp
engine/src/design/: calculation.cpp  calculation_internal.hpp  input_contract.cpp  link_length_solver.cpp
engine/src/dynamics/: joint_requirements.cpp
engine/src/kinematics/: parametric_arm.cpp  reference_arm.cpp
engine/src/protocol/: frame.cpp  handler.cpp  session.cpp
engine/tests/: cli_integration_test.py  cli_pipe_fixture.py  design_calculation_cli_integration_test.py  design_calculation_test.cpp  frame_test.cpp  kinematics_test.cpp  protocol_test.cpp  session_test.cpp
profiles/conan/: macos-arm64-apple-clang17
protocol/: README.md  design-input.schema.json  design-result.schema.json  envelope.schema.json
protocol/examples/: error-response.json  forward-request.json  forward-response.json  health-request.json  health-response.json  health-robotics-response.json
protocol/v1/: README.md  envelope.schema.json
protocol/v1/examples/: error-response.json  forward-request.json  forward-response.json  health-request.json  health-response.json  health-robotics-response.json
rust/engine-client/: Cargo.toml
rust/engine-client/src/: lib.rs
rust/engine-client/tests/: fake_engine.py  lifecycle.rs  real_engine.rs
scripts/: setup-cpp-deps.sh  setup-rust.sh  stage-sidecar.py  test-engine.sh  test-robotics.sh  test-rust-client.sh
src/: App.tsx  engine.test.ts  engine.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  engine.rs  lib.rs  main.rs
src/domain/: joints.test.ts  joints.ts
tests/golden/design_calculation/: feasible-expected.json  feasible-input.json  infeasible-input.json
tools/: requirements-conan.txt
