[package]
name = "robot-design-copilot-desktop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Tauri desktop application for Robot Design Copilot"

[lib]
name = "robot_design_copilot_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
robot-engine-client = { path = "../rust/engine-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-shell = "=2.3.5"
